@@ -1,7 +1,6 @@
 package com.mojang.realmsclient.exception;
 
 import com.mojang.realmsclient.client.RealmsError;
-import java.util.Locale;
 import javax.annotation.Nullable;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
@@ -32,9 +31,9 @@ public class RealmsServiceException extends Exception {
 		if (this.realmsError != null) {
 			String string = "mco.errorMessage." + this.realmsError.getErrorCode();
 			String string2 = I18n.exists(string) ? I18n.get(string) : this.realmsError.getErrorMessage();
-			return String.format(Locale.ROOT, "Realms service error (%d/%d) %s", this.httpResultCode, this.realmsError.getErrorCode(), string2);
+			return "Realms service error (%d/%d) %s".formatted(this.httpResultCode, this.realmsError.getErrorCode(), string2);
 		} else {
-			return String.format(Locale.ROOT, "Realms service error (%d) %s", this.httpResultCode, this.rawResponse);
+			return "Realms service error (%d) %s".formatted(this.httpResultCode, this.rawResponse);
 		}
 	}
 
